2008-02-25  Mark Mentovai  <mark@moxienet.com>

Reviewed by Mark Rowe.

        Enable CollectorHeapIntrospector to build by itself, as well as in an AllInOneFile build.
        http://bugs.webkit.org/show_bug.cgi?id=17538

        * kjs/CollectorHeapIntrospector.cpp: Provide "using" declaration for
          WTF::RemoteMemoryReader.
        * kjs/collector.h: Move CollectorHeap declaration here...
        * kjs/collector.cpp: ... from here.


Canonical link: https://commits.webkit.org/24287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30576 268f45cc-cd09-0410-ab3c-d52691b4dbfc