JavaScriptCore/kjs/CollectorHeapIntrospector.cpp
@@ -32,6 +32,8 @@
 #include "collector.h"
 #include "MallocZoneSupport.h"
 
+using WTF::RemoteMemoryReader;
+
 namespace KJS {
 
 extern "C" {
